# Geant4_resource

./: .gitattributes  README.md  h1.STL  h1_ascii.stl  h2_ascii.stl  h3_ascii.stl  h4_ascii.stl  h5_ascii.stl  h6_ascii.stl  h7_ascii.stl  neutron.rar  p11_ascii.stl  p13_ascii.stl  p14_ascii.stl  p16_ascii.stl  p17_ascii.stl  p18_ascii.stl  p20_ascii.stl  p4_ascii.stl  z1.STL  z10_ascii.stl  z11_ascii.stl  z12_ascii.stl  z13_ascii.stl  z14_ascii.stl  z15_ascii.stl  z16_ascii.stl  z17_ascii.stl  z18_ascii.stl  z19_ascii.stl  z20_ascii.stl  z2_ascii.stl  z3_ascii.stl  z4_ascii.stl  z5_ascii.stl  z6_ascii.stl  z7_ascii.stl  z8_ascii.stl  z9_ascii.stl
11_nsignal_0.6/: CMakeLists.txt  exampleB1.cc  ngamma.mac  run1.mac
11_nsignal_0.6/include/: .DetectorConstruction.hh.swp  ActionInitialization.hh  CADMesh.hh  DetectorConstruction.hh  EventAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
11_nsignal_0.6/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  HistoManager.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
11_nsignal_0.6/test/: CMakeCache.txt  G4History.macro  Makefile  cmake_install.cmake  exampleB1  neutronspectrum.txt  ngamma.mac
h/: h1.STL  h23.STL  h33_ascii.stl  h36_ascii.stl  h39_ascii.stl  h43_ascii.stl  h44_ascii.stl  h47_ascii.stl  h48_ascii.stl  h49_ascii.stl  h7.STL
h1/: h10.STL  h2.STL  h3.STL  h4.STL  h5.STL  h6.STL  h8.STL  h9.STL
h11/: h11.STL  h12.STL  h14.STL  h15.STL  h16.STL  h17.STL  h18.STL  h19.STL  h20.STL
h21/: h21.STL  h22.STL  h24.STL  h25.STL  h26.STL  h27.STL  h28.STL  h29_ascii.stl  h30_ascii.stl
h31/: h31_ascii.stl  h32_ascii.stl  h34_ascii.stl  h35_ascii.stl  h37_ascii.stl  h38_ascii.stl  h40_ascii.stl
h41/: h41_ascii.stl  h42_ascii.stl  h45_ascii.stl  h46_ascii.stl  h50_ascii.stl
p1/: p15_ascii.stl  p31_ascii.stl
p2/: p41_ascii.stl  p47_ascii.stl  p51_ascii.stl
p3/: p60_ascii.stl  p71_ascii.stl
z1/: z10_ascii.stl  z13_ascii.stl  z2_ascii.stl  z5_ascii.stl  z9_ascii.stl
z2/: z17_ascii.stl  z20_ascii.stl  z22_ascii.stl  z37.STL  z39_ascii.stl  z40_ascii.stl
z21/: z24.STL  z25.STL  z26.STL  z27.STL  z28.STL  z29.STL  z30.STL
z3/: z57_ascii.stl  z60_ascii.stl  z61_ascii.stl  z62_ascii.stl  z63_ascii.stl
z31/: z31.STL  z32.STL  z33.STL  z34.STL  z35.STL  z36.STL
z4/: z103_ascii.stl  z115_ascii.stl  z116_ascii.stl  z117_ascii.stl  z124_ascii.stl  z125_ascii.stl  z127_ascii.stl  z128_ascii.stl  z133_ascii.stl  z134_ascii.stl  z135_ascii.stl  z138_ascii.stl  z139_ascii.stl  z149_ascii.stl  z150_ascii.stl
z41/: z41_ascii.STL
z5/: z153_ascii.stl  z160_ascii.stl  z170_ascii.stl  z171_ascii.stl  z172_ascii.stl  z178_ascii.stl  z179_ascii.stl  z180_ascii.stl  z185_ascii.stl  z186_ascii.stl  z187_ascii.stl  z188_ascii.stl
z6/: z218_ascii.stl  z219_ascii.stl  z222_ascii.stl  z223_ascii.stl  z229_ascii.stl  z232_ascii.stl  z233_ascii.stl  z234_ascii.stl  z235_ascii.stl  z236_ascii.stl  z237_ascii.stl  z238_ascii.stl  z239_ascii.stl  z240_ascii.stl  z241_ascii.stl  z244_ascii.stl  z245_ascii.stl  z246_ascii.stl  z249_ascii.stl  z250_ascii.stl
